apps/general/podinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-nginx
  namespace: podinfo
spec:
  ingressClassName: internal
  rules:
  - host: podinfo.${DOMAIN_0}
    http:
      paths:
      - backend:
          service:
            name: podinfo
            port:
              number: 9898
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-nginx
  namespace: podinfo
spec:
  ingressClassName: cloudflare
  rules:
  - host: podinfo.${DOMAIN_0}
    http:
      paths:
      - backend:
          service:
            name: podinfo
            port:
              number: 9898
        path: /
        pathType: Prefix
